Completed prep-html-syntax exercise.

--- a/__sample__/index.html
+++ b/__sample__/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>sample code</title>
+  <title>I would like to build</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Hello, Code Solutions!</h1>
+  <h1>With my new coding skills I would like to build awesome apps!</h1>
   <script src="main.js"></script>
 </body>
 </html>
