--- a/prep-css-syntax/index.html
+++ b/prep-css-syntax/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>CSS Syntax</title>
   <style>
-  h1 { font-family: Arial, Arial, Helvetica, sans-serif;
+  h1 { font-family: Arial, Helvetica, sans-serif;
 
   }
   p { font-size: 2rem;
