Completed prep-css-flexbox exercise.

--- a/prep-css-flexbox/align-items.html
+++ b/prep-css-flexbox/align-items.html
@@ -5,14 +5,20 @@
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="starwars.css">
   <style>
-   .container {display: flex; flex-basis:calc(100%/3); min-height: 100vh; align-items: center; justify-content: center;
+
+
+   #card-deck{ display: flex; min-height: 100vh; align-items: center; justify-content: center;
+
+   }
+
+   .card-wrapper { flex-basis: calc(100%/3);
 
    }
 
   </style>
 </head>
 <body>
-  <div class="container"
+  <div
   id="card-deck">
     <div class="card-wrapper">
       <div class="star-wars-card">
