--- a/prep-css-flexbox/display-flex.html
+++ b/prep-css-flexbox/display-flex.html
@@ -6,19 +6,16 @@
   <link rel="stylesheet" href="starwars.css">
   <style>
 
-    .container {
-      display: flex;
-    }
-    .card-deck {
-      padding: 50px;
+    #card-deck { display:flex; flex-direction: row;
+      padding: 10px;
     }
     .card-wrapper {
-      padding: 4px;
+      padding: 5px;
     }
   </style>
 </head>
 <body>
-  <div class="container" id="card-deck">
+  <div id="card-deck">
     <div class="card-wrapper">
       <div class="star-wars-card">
         <img src="images/ahsoka.jpg" alt="Ahsoka">
