--- a/prep-css-flexbox/flex-wrap.html
+++ b/prep-css-flexbox/flex-wrap.html
@@ -5,22 +5,21 @@
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="starwars.css">
   <style>
-.container {
-  display: flex; flex-wrap: wrap;
-}
 
-    .card-deck { padding: 10px;
-    }
-    .card-wrapper { flex-basis:calc(100% / 6);
-      padding: 10px;
+
+    .card-wrapper { flex-basis:calc(100% / 6); padding: 5px;
+
     }
 
+    #card-deck { display: flex; flex-wrap: wrap;
+      padding: 5px;
+    }
 
 
   </style>
 </head>
 <body>
-  <div class="container"
+  <div
    id="card-deck">
     <div class="card-wrapper">
       <div class="star-wars-card">
