--- a/prep-css-flexbox/justify-content.html
+++ b/prep-css-flexbox/justify-content.html
@@ -5,18 +5,21 @@
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="starwars.css">
   <style>
-    .container { display: flex; justify-content: center;
+
+
+    .card-wrapper { flex-basis: 25%; padding: 5px;
     }
-    .card-deck { padding: 300px;
+
+    #card-deck { display: flex; justify-content: center; padding: 15px;
 
     }
-    .card-wrapper { flex-basis: 25%; padding: 15px;
-    }
+
+
 
   </style>
 </head>
 <body>
-  <div class="container"
+  <div
   id="card-deck">
     <div class="card-wrapper">
       <div class="star-wars-card">
