removed quotes from numbers, booleans, and null.

--- a/prep-javascript-variables/index.html
+++ b/prep-javascript-variables/index.html
@@ -8,13 +8,13 @@
     var fullName = 'Patricia Manalang';
     console.log(fullName);
 
-    var numberOfPets = '0';
+    var numberOfPets = 0;
     console.log(numberOfPets);
 
-    var likesVegetables = 'true';
+    var likesVegetables = true;
     console.log(likesVegetables);
 
-    var nothing = 'null';
+    var nothing = null;
     console.log(nothing);
 
     var never;
